--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^8.65",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5"
+        "laravel/sanctum": "^3.3"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
